--- a/wb3s_nebula_light.yaml
+++ b/wb3s_nebula_light.yaml
@@ -38,48 +38,40 @@ web_server:
   port: 80
 
 light:
-  - platform: rgb
-    name: ${name}_light
-    id: rgb_light
-    red: red
-    green: green
-    blue: blue
-    restore_mode: ALWAYS_OFF
-    effects:
-      - flicker:
-          name: Flicker
-          alpha: 95%
-          intensity: 2.5%
-      - random:
-          name: Random
-          transition_length: 2.5s
-          update_interval: 3s
-      - random:
-          name: Random Slow
-          transition_length: 10s
-          update_interval: 5s
-
   - platform: monochromatic
-    name: ${name}_laser
+    name: Red Nebula
+    id: red_nebula
+    output: red
+    restore_mode: ALWAYS_OFF
+  - platform: monochromatic
+    name: Green Nebula
+    id: green_nebula
+    output: green
+    restore_mode: ALWAYS_OFF
+  - platform: monochromatic
+    name: Blue Nebula
+    id: blue_nebula
+    output: blue
+    restore_mode: ALWAYS_OFF
+  - platform: monochromatic
+    name: Laser
     id: laser
     output: laser_pwm
     restore_mode: ALWAYS_OFF
-  - platform: monochromatic
-    name: ${name}_bled
-    id: bled
-    output: bled_pwm
+  - platform: binary
+    name: Button LED0
+    id: button_led0
+    output: button_led0_out
     restore_mode: ALWAYS_OFF
-    internal: true
   - platform: monochromatic
-    name: ${name}_rled
-    id: rled
-    output: rled_pwm
+    name: Button LED1
+    id: button_led1
+    output: button_led1_out
     restore_mode: ALWAYS_OFF
-    internal: true
 
 fan:
   platform: speed
-  name: "${name}_motor"
+  name: Motor
   id: motor
   output: motor_pwm
   restore_mode: ALWAYS_OFF
@@ -101,20 +93,18 @@ output:
   - platform: libretiny_pwm
     id: laser_pwm
     pin: P8
-    # max_power: 80%
-    # frequency: 2000 Hz
     inverted: true
   - platform: libretiny_pwm
     id: motor_pwm
     pin: P6
     min_power: 15%
 
-  - platform: libretiny_pwm
-    id: bled_pwm
+  - platform: gpio
+    id: button_led0_out
     pin: P1
     inverted: true
   - platform: libretiny_pwm
-    id: rled_pwm
+    id: button_led1_out
     pin: P7
     inverted: true
 
@@ -124,43 +114,17 @@ binary_sensor:
       number: P14
       mode: INPUT_PULLDOWN_16
       inverted: true
-    name: ${name}_button
+    name: Button
     on_press:
       then:
-        - light.turn_on:
-            id: rgb_light
-            brightness: 30%
+        - fan.turn_on:
+            id: motor
+            speed: 100
         - light.turn_on:
             id: laser
             brightness: 65%
         - delay : 1h
-        - light.turn_off:
-            id: rgb_light
+        - fan.turn_off:
+            id: motor
         - light.turn_off:
             id: laser
-
-interval:
-  - interval: 1s
-    then:
-      if:
-        condition:
-          wifi.connected:
-        then:
-          - light.turn_on:
-              id: bled
-              brightness: 50%
-        else:
-          - light.turn_off:
-              id: bled
-  - interval: 1s
-    then:
-      if:
-        condition:
-          api.connected:
-        then:
-          - light.turn_on:
-              id: rled
-              brightness: 50%
-        else:
-          - light.turn_off:
-              id: rled
