--- a/nebula_light_device.yaml
+++ b/nebula_light_device.yaml
@@ -8,7 +8,7 @@
 globals:
   - id: global_scene_id
     type: size_t
-    restore_value: yes
+    restore_value: $store_scene_to_flash
     initial_value: "0"
 
 light:
